@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-20T02:04:36Z",
-  "count" : 26,
-  "count_minmax" : [ 26, 26 ],
-  "count_decinc" : [ -0, +26 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-06-20T08:32:45Z",
+  "count" : 122,
+  "count_minmax" : [ 26, 122 ],
+  "count_decinc" : [ -0, +122 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
