@@ -1,10 +1,10 @@
 {
-  "count": 4920,
+  "count": 4914,
   "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 285,
+      "count": 183,
       "uniques": 2
     },
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 26,
-      "uniques": 1
+      "count": 122,
+      "uniques": 2
     }
   ]
 }
