@@ -1,3 +1,10 @@
+2022-06-20T08:32:45Z:
+* notice: last 14d: unq all: 14 4914
+* notice: prev accum: outdated-unq outdated-all / unq all: 628 30450 / 671 35370
+* notice: next accum: outdated-unq outdated-all / unq all: 628 30450 / 672 35364
+* notice: prev exec diff / last date diff / accum: unq all: +1 +96 -0 -102 / +2 +122 -0 -0 / 2 122
+* notice: removed / changed dates: [] / [2022-06-06 2022-06-20]
+
 2022-06-20T02:04:36Z:
 * notice: last 14d: unq all: 14 4920
 * notice: prev accum: outdated-unq outdated-all / unq all: 625 30094 / 668 34985
